objects/Project__c/fields/ACCESS_Room2__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_Room2__c</fullName>
    <inlineHelpText>-Check stairs, steps, doorways 
-Protect décor 
-Warn client of possible damage to decor 
-Key access?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>