objects/Project__c/fields/ADAPTORS_Room1__c.field-meta.xml
<CustomField>
    <fullName>ADAPTORS_Room1__c</fullName>
    <inlineHelpText>Check: 
-3:1 tips 
-Handpieces 
-Spittoon funnel if no spittoon on chair 
-Suction tips</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>