objects/Project__c/fields/ADAPTORS_Room2__c.field-meta.xml
<CustomField>
    <fullName>ADAPTORS_Room2__c</fullName>
    <inlineHelpText>Check: 
-3:1 tips 
-Handpieces 
-Spittoon funnel if no spittoon on chair 
-Suction tips</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>