objects/Project__c/fields/CAPPING_Room1__c.field-meta.xml
<CustomField>
    <fullName>CAPPING_Room1__c</fullName>
    <inlineHelpText>Black capping on cove</inlineHelpText>
    <label>Room1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>