objects/Project__c/fields/CAPPING_Room2__c.field-meta.xml
<CustomField>
    <fullName>CAPPING_Room2__c</fullName>
    <inlineHelpText>Black capping on cove</inlineHelpText>
    <label>Room2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>