objects/Project__c/fields/CHAIR_BUILD_INS_Room1__c.field-meta.xml
<CustomField>
    <fullName>CHAIR_BUILD_INS_Room1__c</fullName>
    <inlineHelpText>Curing Light/Camera/Spittoon Valves</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>