objects/Project__c/fields/CHAIR_POSITION_Room1__c.field-meta.xml
<CustomField>
    <fullName>CHAIR_POSITION_Room1__c</fullName>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>