objects/Project__c/fields/CHAIR_POSITION_Room2__c.field-meta.xml
<CustomField>
    <fullName>CHAIR_POSITION_Room2__c</fullName>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>