objects/Project__c/fields/COMPUTER_Room1__c.field-meta.xml
<CustomField>
    <fullName>COMPUTER_Room1__c</fullName>
    <inlineHelpText>-CPU position shown on drawing -Monitors locations shown on drawing -2nd Monitor connections – photo of backof computer, confirm how  -Splitter required? -Cables required? -ExtensionUSB/keyboard/mouse/monitor cables required? -Cable management port po</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>