objects/Project__c/fields/COMPUTER_Room2__c.field-meta.xml
<CustomField>
    <fullName>COMPUTER_Room2__c</fullName>
    <inlineHelpText>of computer, confirm how  -Splitter required? -Cables required? -ExtensionUSB/keyboard/mouse/monitor cables required? -Cable management port position -Cable route agreed -Data point -Provision for a microscope?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>