objects/Project__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contacts</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects_del</relationshipName>
    <type>Lookup</type>
</CustomField>