objects/Project__c/fields/DECORATING_Room1__c.field-meta.xml
<CustomField>
    <fullName>DECORATING_Room1__c</fullName>
    <inlineHelpText>-Walls, Ceiling, Woodwork 
-Aiden &amp; Parker Colour Chart 
-Confirm exact content 
-Time allowance</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>