objects/Project__c/fields/DIMENSIONS_Room1__c.field-meta.xml
<CustomField>
    <fullName>DIMENSIONS_Room1__c</fullName>
    <inlineHelpText>Double check critical room dimensions and cabinetry dimensions (including heights) with client.</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>