objects/Project__c/fields/DISPENSERS_Room1__c.field-meta.xml
<CustomField>
    <fullName>DISPENSERS_Room1__c</fullName>
    <inlineHelpText>-Centre Feed or C-Fold towels 
-Gloves 
-Aprons 
-Soaps 
-Integral to wall unit or independent?</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>