objects/Project__c/fields/DISPENSERS_Room2__c.field-meta.xml
<CustomField>
    <fullName>DISPENSERS_Room2__c</fullName>
    <inlineHelpText>Centre Feed or C-Fold towels 
-Gloves 
-Aprons 
-Soaps 
-Integral to wall unit or independent?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>