objects/Project__c/fields/DISPOSAL_Room1__c.field-meta.xml
<CustomField>
    <fullName>DISPOSAL_Room1__c</fullName>
    <inlineHelpText>Items &amp; Method</inlineHelpText>
    <label>Room1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>