objects/Project__c/fields/DRAWERS_Room1__c.field-meta.xml
<CustomField>
    <fullName>DRAWERS_Room1__c</fullName>
    <inlineHelpText>Configuration</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>