objects/Project__c/fields/DRAWERS_Room2__c.field-meta.xml
<CustomField>
    <fullName>DRAWERS_Room2__c</fullName>
    <inlineHelpText>Configuration</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>