objects/Project__c/fields/Drawing_Reference_Room1__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Reference_Room1__c</fullName>
    <label>Drawing Reference</label>
    <type>TextArea</type>
</CustomField>