objects/Project__c/fields/DRAWINGS_Room1__c.field-meta.xml
<CustomField>
    <fullName>DRAWINGS_Room1__c</fullName>
    <inlineHelpText>Finalised and signed? Rev No.</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>