objects/Project__c/fields/DRAWINGS_Room2__c.field-meta.xml
<CustomField>
    <fullName>DRAWINGS_Room2__c</fullName>
    <inlineHelpText>Finalised and signed? Rev No.</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>