objects/Project__c/fields/ELECTRICS_Room2__c.field-meta.xml
<CustomField>
    <fullName>ELECTRICS_Room2__c</fullName>
    <inlineHelpText>-Socket positions, circuits, isolation 
-Check for telephone, intercom  or data cables &amp; agree routes – normally surface 
-Any redundant cabling that can be removed? 
-Any chasing</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>