objects/Project__c/fields/END_PANELS_Room2__c.field-meta.xml
<CustomField>
    <fullName>END_PANELS_Room2__c</fullName>
    <inlineHelpText>Square Cut for Cove and Capping</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>