objects/Project__c/fields/Features1__c.field-meta.xml
<CustomField>
    <fullName>Features1__c</fullName>
    <label>Features</label>
    <type>TextArea</type>
</CustomField>