objects/Project__c/fields/Features2__c.field-meta.xml
<CustomField>
    <fullName>Features2__c</fullName>
    <label>Features</label>
    <type>TextArea</type>
</CustomField>