objects/Project__c/fields/FITTERS_Room1__c.field-meta.xml
<CustomField>
    <fullName>FITTERS_Room1__c</fullName>
    <inlineHelpText>Confirm best fitters/contractors arranged</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>