objects/Project__c/fields/FITTERS_Room2__c.field-meta.xml
<CustomField>
    <fullName>FITTERS_Room2__c</fullName>
    <inlineHelpText>Confirm best fitters/contractors arranged</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>