objects/Project__c/fields/FLOORING_Room1__c.field-meta.xml
<CustomField>
    <fullName>FLOORING_Room1__c</fullName>
    <inlineHelpText>Gerflor Metalica</inlineHelpText>
    <label>Room1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>