objects/Project__c/fields/FRONTS_Room1__c.field-meta.xml
<CustomField>
    <fullName>FRONTS_Room1__c</fullName>
    <inlineHelpText>Vinyl / 1mm Acrylic / Solid Acrylic / Corian</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>