objects/Project__c/fields/GARAGES_Room1__c.field-meta.xml
<CustomField>
    <fullName>GARAGES_Room1__c</fullName>
    <inlineHelpText>With back panel / plinth &amp; shelf / turtle cart / slide?</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>