objects/Project__c/fields/GARAGES_Room2__c.field-meta.xml
<CustomField>
    <fullName>GARAGES_Room2__c</fullName>
    <inlineHelpText>With back panel / plinth &amp; shelf / turtle cart / slide?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>