objects/Project__c/fields/HANDLES_Room1__c.field-meta.xml
<CustomField>
    <fullName>HANDLES_Room1__c</fullName>
    <inlineHelpText>Chrome Bow</inlineHelpText>
    <label>Room1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>