objects/Project__c/fields/HANDLES_Room2__c.field-meta.xml
<CustomField>
    <fullName>HANDLES_Room2__c</fullName>
    <inlineHelpText>Chrome Bow</inlineHelpText>
    <label>Room2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>