objects/Project__c/fields/HANDPIECES_Room1__c.field-meta.xml
<CustomField>
    <fullName>HANDPIECES_Room1__c</fullName>
    <inlineHelpText>Requirements? Air Motor / Turbines/ CA’s</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>