objects/Project__c/fields/HANDPIECES_Room2__c.field-meta.xml
<CustomField>
    <fullName>HANDPIECES_Room2__c</fullName>
    <inlineHelpText>Requirements? Air Motor / Turbines/ CA’s</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>