objects/Project__c/fields/LDU_Room1__c.field-meta.xml
<CustomField>
    <fullName>LDU_Room1__c</fullName>
    <inlineHelpText>RO/Mag Light/UltraSonic</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>