objects/Project__c/fields/LDU_Room2__c.field-meta.xml
<CustomField>
    <fullName>LDU_Room2__c</fullName>
    <inlineHelpText>RO/Mag Light/UltraSonic</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>