objects/Project__c/fields/LED_LIGHTING_Room1__c.field-meta.xml
<CustomField>
    <fullName>LED_LIGHTING_Room1__c</fullName>
    <inlineHelpText>For wall unit pelmet or plinth? White.</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>