objects/Project__c/fields/LIGHTING_Room1__c.field-meta.xml
<CustomField>
    <fullName>LIGHTING_Room1__c</fullName>
    <inlineHelpText>Area lights/wall lights</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>