objects/Project__c/fields/LIGHTING_Room2__c.field-meta.xml
<CustomField>
    <fullName>LIGHTING_Room2__c</fullName>
    <inlineHelpText>Area lights/wall lights</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>