objects/Project__c/fields/Long_Project_Order__c.field-meta.xml
<CustomField>
    <fullName>Long_Project_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Project Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Long_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>