objects/Project__c/fields/MAKING_GOOD_WORKS_Room1__c.field-meta.xml
<CustomField>
    <fullName>MAKING_GOOD_WORKS_Room1__c</fullName>
    <inlineHelpText>Plastering?</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>