objects/Project__c/fields/MAKING_GOOD_WORKS_Room2__c.field-meta.xml
<CustomField>
    <fullName>MAKING_GOOD_WORKS_Room2__c</fullName>
    <inlineHelpText>Plastering?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>