objects/Project__c/fields/ManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmail__c</fullName>
    <formula>If(ISPICKVAL(Project_Manager__c,&apos;Chester Boyt&apos;),&apos;chester@eclipse-dental.com.unifier&apos;,
If(ISPICKVAL(Project_Manager__c,&apos;John Boyt&apos;),&apos;john@eclipse-dental.com.unifier&apos;,
&apos;ralph@eclipse-dental.com.unifier&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>