objects/Project__c/fields/Note_Points__c.field-meta.xml
<CustomField>
    <fullName>Note_Points__c</fullName>
    <label>Note Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>