objects/Project__c/fields/ORDER_CONFIRMATION_Room1__c.field-meta.xml
<CustomField>
    <fullName>ORDER_CONFIRMATION_Room1__c</fullName>
    <inlineHelpText>Signed?</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>