objects/Project__c/fields/ORDER_CONFIRMATION_Room2__c.field-meta.xml
<CustomField>
    <fullName>ORDER_CONFIRMATION_Room2__c</fullName>
    <inlineHelpText>Signed?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>