objects/Project__c/fields/PAYMENT_SCHEDULE_Room2__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_SCHEDULE_Room2__c</fullName>
    <inlineHelpText>How will payments be made? If Credit Card then 2.5% fee</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>