objects/Project__c/fields/PLANT_Room1__c.field-meta.xml
<CustomField>
    <fullName>PLANT_Room1__c</fullName>
    <inlineHelpText>Amalgam Separation?</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>