objects/Project__c/fields/PLANT_Room2__c.field-meta.xml
<CustomField>
    <fullName>PLANT_Room2__c</fullName>
    <inlineHelpText>Amalgam Separation?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>