objects/Project__c/fields/PLINTH_Room2__c.field-meta.xml
<CustomField>
    <fullName>PLINTH_Room2__c</fullName>
    <inlineHelpText>Black (unless requested otherwise) Flooring will coved onto plinths</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>