objects/Project__c/fields/PLUMBING_Room1__c.field-meta.xml
<CustomField>
    <fullName>PLUMBING_Room1__c</fullName>
    <inlineHelpText>-Check Isolation/Hot Water/Water Pressure 
-Special fittings required?</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>