objects/Project__c/fields/PLUMBING_Room2__c.field-meta.xml
<CustomField>
    <fullName>PLUMBING_Room2__c</fullName>
    <inlineHelpText>-Check Isolation/Hot Water/Water Pressure 
-Special fittings required?</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>