objects/Project__c/fields/PROJECT_MANAGEMENT_Room2__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_MANAGEMENT_Room2__c</fullName>
    <inlineHelpText>-What level is required? 
-How does the client want the job managed? 
-How does the client want to communicate? 
-RAMS -CDM if over 30 days</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>