objects/Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chester Boyt</fullName>
            </value>
            <value>
                <fullName>John Boyt</fullName>
            </value>
            <value>
                <fullName>Ralph Boyt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>