objects/Project__c/fields/Range_Room1__c.field-meta.xml
<CustomField>
    <fullName>Range_Room1__c</fullName>
    <inlineHelpText>Nevada / Reno/ Monterey / Sedona</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>