objects/Project__c/fields/Range_Room2__c.field-meta.xml
<CustomField>
    <fullName>Range_Room2__c</fullName>
    <inlineHelpText>Nevada / Reno/ Monterey / Sedona</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>