objects/Project__c/fields/Ready_For_Use_On__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Use_On__c</fullName>
    <label>Ready For Use On</label>
    <type>TextArea</type>
</CustomField>