objects/Project__c/fields/RECEPTION_Room1__c.field-meta.xml
<CustomField>
    <fullName>RECEPTION_Room1__c</fullName>
    <inlineHelpText>Seating/Desk/Furniture/Filing</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>