objects/Project__c/fields/RECEPTION_Room2__c.field-meta.xml
<CustomField>
    <fullName>RECEPTION_Room2__c</fullName>
    <inlineHelpText>Seating/Desk/Furniture/Filing</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>