objects/Project__c/fields/REFFERALS_Room1__c.field-meta.xml
<CustomField>
    <fullName>REFFERALS_Room1__c</fullName>
    <inlineHelpText>Ask for referrals PR Marketing Case study Testimonial/Quote</inlineHelpText>
    <label>Room1</label>
    <type>TextArea</type>
</CustomField>