objects/Project__c/fields/REFFERALS_Room2__c.field-meta.xml
<CustomField>
    <fullName>REFFERALS_Room2__c</fullName>
    <inlineHelpText>Ask for referrals PR Marketing Case study Testimonial/Quote</inlineHelpText>
    <label>Room2</label>
    <type>TextArea</type>
</CustomField>