objects/Project__c/fields/Room1_Anyitems__c.field-meta.xml
<CustomField>
    <fullName>Room1_Anyitems__c</fullName>
    <label>Any items not to be disposed of?</label>
    <type>TextArea</type>
</CustomField>