objects/Project__c/fields/Room1_Bowl_Type__c.field-meta.xml
<CustomField>
    <fullName>Room1_Bowl_Type__c</fullName>
    <label>Bowl Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Corian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>