objects/Project__c/fields/Room1_Capping_Colour__c.field-meta.xml
<CustomField>
    <fullName>Room1_Capping_Colour__c</fullName>
    <label>Capping Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>