objects/Project__c/fields/Room1_Ceiling_Paint_Colour__c.field-meta.xml
<CustomField>
    <fullName>Room1_Ceiling_Paint_Colour__c</fullName>
    <label>Ceiling Paint Colour</label>
    <type>TextArea</type>
</CustomField>