objects/Project__c/fields/Room1_Drawers__c.field-meta.xml
<CustomField>
    <fullName>Room1_Drawers__c</fullName>
    <label>Drawers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration as shown on drawing</fullName>
                <default>true</default>
                <label>Configuration as shown on drawing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>